<resources>
    <string name="app_name">OWL Flash Cards en-cn level 1</string>
    <string name="flashcarddatabasename">Flash Card Database</string>

    <string name="animals_title">Animals</string>
    <string name="cards_default_fragment_title">All Cards</string>
    <string name="search_button_description">Search</string>
    <string name="search_term_chinese">Chinese</string>
    <string name="search_term_english">English</string>
    <string name="search_hint_text">Enter Search Term Here...</string>
    <string name="search_screen_play_sound_description">search screen play sound</string>
    <string name="search_no_results_default_text">No Results&#8230;</string>
    <string name="search_text_view_results_description">Search Text View Results</string>
    <string name="search_close_button">Close</string>
    <string name="play_sound_button_description">Play Sound</string>
    <string name="pinyin_tones_of_mandarin_explanation_description">Chinese pronunciation uses a system called <b><i>Pinyin</i></b>. In <i>Pinyin</i> the four traditional <b><i>Tones of Mandarin</i></b> are used to identify the correct sound by reading the symbol above the letter.</string>
    <string name="chinese_prounciation_guide_header">Quick Guide</string>
    <string name="pinyin_writing_style_note_description"><b>Note</b> authentic <i>Pinyin</i> writing does not use capital letters, only lowercase.</string>
    <string name="first_tone_pinyin_description">The <b><i>First Tone</i></b> is represented by a Macron above the letter.</string>
    <string name="first_tone_pinion_example_text_description">ā ē ī ō ū</string>
    <string name="second_tone_pinyin_description">The <b><i>Second Tone</i></b> is represented by an <i>acute accent</i>.</string>
    <string name="second_tone_pinion_example_text_description">á é í ó ú</string>
    <string name="third_tone_pinyin_description">The <b><i>Third Tone</i></b> is represented by a <i>caron/háček</i>.</string>
...
    <string name="fourth_tone_pinyin_description">The <b><i>Fourth Tone</i></b> is represented by a <i>grave accent</i>.</string>
    <string name="fourth_tone_pinion_example_text_description">à è ì ò ù</string>
    <string name="neutral_tone_pinyin_description">All vowels without an accent mark are considered <i>neutral tones</i>.</string>
    <string name="neutral_tone_pinyin_text_example_description">a e i o u</string>
    <string name="neutral_tone_side_note_description"><b>Note</b> In dictionaries neutral tones can sometimes be preceded by a dot to show a different pronunciation.</string>
    <string name="neutral_tone_side_note_example_description">·a</string>
    <string name="play_sample_sound_button_description">Play sample sound.</string>
    <string name="pronunciation_guide_header_description">Pronunciation Guide Header</string>
    <string name="mainscreen_logo_image_description">MainScreen Logo Image</string>
    <string name="settings_title">Settings</string>
    <string name="help_screen_on_preference_description">On</string>
    <string name="help_screen_off_preference_description">Off</string>
    <string name="default_edit_text_name_string"> </string>
    <string name="pref_edit_text_title_display_name">Display Name</string>
    <string name="switch_preferences_card_side_english">English</string>
    <string name="switch_preferences_card_side_chinese">Chinese</string>
...
    <string name="pref_category_general">General</string>
    <string name="preference_category_flash_cards">Flash Cards</string>
    <string name="language_choice_default_value">English</string>
    <string name="owl_flashcards_logo_toast_display">owl flashcards logo</string>
    <string name="welcome_back_string_greeting">Welcome Back</string>
    <string name="welcome_string_greeting">Welcome</string>
    <string name="alert_dialog_ok_button">Ok</string>
    <string name="welcome_to_owl_flash_cards_alert_title">Welcome to OWL FlashCards.</string>
    <string name="set_display_name_alert_message">Please Set Your Display Name</string>
    <string name="alert_card_help_left_arrow">left arrow</string>
    <string name="alert_card_help_right_arrow">right arrow</string>
    <string name="aler_card_help_tap_card_a_example">tap card a example</string>
    <string name="alert_card_help_card_a_tap_now_showing_card_b">card a tap now showing card b</string>
    <string name="image_view_front_and_reverse_card_center">front and reverse card center</string>
    <string name="pronunciation_guide_text">Pronunciation Guide</string>
    <string name="animals_text">Animals</string>
    <string name="bodyparts_text">BodyParts</string>
    <string name="foods_text">Foods</string>
    <string name="numbers_text">Numbers</string>
    <string name="objects_text">Objects</string>
    <string name="people_text">People</string>
    <string name="places_text">Places</string>
    <string name="shapes_u0026_colors_text"><![CDATA[Shapes & Colors]]></string>
    <string name="transportation_text">Transportation</string>
    <string name="our_world_languages_title_text">Our World Languages</string>
    <string name="english_to_chinese_flash_cards_title_text">English to Chinese Flash Cards</string>
    <string name="level_1_title_text">Level 1</string>
    <string name="begin_text">Begin</string>
    <string name="by_dcf_apps_text">by DCF Apps</string>
    <string name="card_example_text">Card</string>
    <string name="swipe_to_change_cards_example_text">Swipe to change cards.</string>
    <string name="side_a_example_text">Side A</string>
    <string name="side_b_example_text">Side B</string>
    <string name="tap_to_flip_card_example_text">Tap to flip card</string>
    <string name="close_help_description">close help</string>
    <string name="dont_show_again_message_text">Dont Show Again</string>
    <string name="transportation_title">Transportation</string>
    <string name="shapes_and_colors_title">Shapes and Colors</string>
    <string name="places_title">Places</string>
    <string name="people_title">People</string>
    <string name="objects_title">Objects</string>
    <string name="numbers_title">Numbers</string>
...
