...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pronounceGuideButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/earthGreen"
                android:padding="32dp"
                android:text="@string/pronunciation_guide_text"
                android:contentDescription="@string/pronunciation_guide_text"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/cardMenuGridLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:columnCount="2">

                <Button
                    android:id="@+id/cat1Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/earthGreen"
                    android:text="@string/animals_text"
                    android:contentDescription="@string/animals_text"
...
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/cat2Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/earthGreen"
                    android:text="@string/bodyparts_text"
                    android:contentDescription="@string/bodyparts_text"
...
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="1" />

                <Button
                    android:id="@+id/cat9Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/earthGreen"
                    android:text="@string/transportation_text"
                    android:contentDescription="@string/transportation_text"
...
