...
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/prounceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
            android:contentDescription="@string/chinese_prounciation_guide_header"
            android:text="@string/chinese_prounciation_guide_header"
            android:textIsSelectable="true"
...
                android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
                android:contentDescription="@string/first_tone_pinion_example_text_description"
                android:text="@string/first_tone_pinion_example_text_description"
                android:textIsSelectable="true" />

            <ImageButton
                android:id="@+id/sound_macron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_background_light"
                android:contentDescription="@string/play_sample_sound_button_description"
                app:srcCompat="@drawable/ic_play_circle_outline_black_24dp" />
        </LinearLayout>
...
                android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
                android:contentDescription="@string/second_tone_pinion_example_text_description"
                android:text="@string/second_tone_pinion_example_text_description"
                android:textIsSelectable="true" />

            <ImageButton
                android:id="@+id/sound_accent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_background_light"
                android:contentDescription="@string/play_sample_sound_button_description"
                app:srcCompat="@drawable/ic_play_circle_outline_black_24dp" />
        </LinearLayout>
...
                android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
                android:contentDescription="@string/third_tone_pinion_example_text_description"
                android:text="@string/third_tone_pinion_example_text_description"
                android:textIsSelectable="true" />

            <ImageButton
                android:id="@+id/sound_caron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_background_light"
                android:contentDescription="@string/play_sample_sound_button_description"
                app:srcCompat="@drawable/ic_play_circle_outline_black_24dp"
                android:textIsSelectable="true" />
...
                android:layout_marginBottom="@dimen/default_bottom_margin_prounciation_activity"
                android:contentDescription="@string/fourth_tone_pinion_example_text_description"
                android:text="@string/fourth_tone_pinion_example_text_description"
                android:textIsSelectable="true" />

            <ImageButton
                android:id="@+id/sound_grave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_background_light"
                android:contentDescription="@string/play_sample_sound_button_description"
                app:srcCompat="@drawable/ic_play_circle_outline_black_24dp" />
        </LinearLayout>
...
