...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewFlippale"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/card_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


...
                android:textColor="@color/earthGreen"
                android:textIsSelectable="true"
                android:textSize="28sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/cardCenterImage"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/image_view_front_and_reverse_card_center"
                android:minHeight="50dp"
                android:scaleType="fitCenter"
                android:src="@drawable/high_little_owl" />

            <ImageButton
                android:id="@+id/play_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/play_sound_button_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
...
