package com.dcfportfolio.owlflashcardsen_cnlevel1;


import android.content.Context;
import android.content.SharedPreferences;
import android.preference.PreferenceManager;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.DataInteraction;
import android.support.test.espresso.ViewInteraction;
import android.support.test.filters.LargeTest;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.Espresso.pressBack;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.longClick;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.contrib.RecyclerViewActions.actionOnItemAtPosition;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withClassName;
import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class AppFunctionalityWithDefaultPrefrencesOnRecordedTest {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<MainActivity>(MainActivity.class){
        @Override
        protected void beforeActivityLaunched() {
            clearSharedPrefs(InstrumentationRegistry.getTargetContext());
            super.beforeActivityLaunched();
        }
    };

    /**
     * Clears everything in the SharedPreferences
     */
    private void clearSharedPrefs(Context context) {
        SharedPreferences prefs =
                PreferenceManager.getDefaultSharedPreferences(context);
        SharedPreferences.Editor editor = prefs.edit();
        editor.clear();
        editor.commit();
    }

    @Test
    public void appFunctionalityWithDefaultPrefrencesOnTest() {

        ViewInteraction editText = onView(
                allOf(childAtPosition(
                        allOf(withId(R.id.custom),
                                childAtPosition(
                                        withId(R.id.customPanel),
                                        0)),
                        0),
                        isDisplayed()));
        editText.perform(replaceText("Dav"), closeSoftKeyboard());

        ViewInteraction appCompatButton = onView(
                allOf(withId(android.R.id.button1), withText("Ok"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton.perform(scrollTo(), click());

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.title_enter_button), withText("Begin"), withContentDescription("Begin"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction textView = onView(
                allOf(withText("Categories"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Categories")));

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(R.id.pronounceGuideButton), withText("Pronunciation Guide"), withContentDescription("Pronunciation Guide"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.ScrollView")),
                                        0),
                                0)));
        appCompatButton3.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton = onView(
                allOf(withId(R.id.sound_macron), withContentDescription("Play sample sound."),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        4),
                                1)));
        appCompatImageButton.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton2 = onView(
                allOf(withId(R.id.sound_accent), withContentDescription("Play sample sound."),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        6),
                                1)));
        appCompatImageButton2.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton3 = onView(
                allOf(withId(R.id.sound_caron), withContentDescription("Play sample sound."),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        8),
                                1)));
        appCompatImageButton3.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton4 = onView(
                allOf(withId(R.id.sound_grave), withContentDescription("Play sample sound."),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        10),
                                1)));
        appCompatImageButton4.perform(scrollTo(), click());

        ViewInteraction appCompatImageButton5 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton5.perform(click());

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(R.id.pronounceGuideButton), withText("Pronunciation Guide"), withContentDescription("Pronunciation Guide"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.ScrollView")),
                                        0),
                                0)));
        appCompatButton4.perform(scrollTo(), click());

        ViewInteraction textView2 = onView(
                allOf(withId(R.id.prounceHeader), withText("Quick Guide"), withContentDescription("Quick Guide"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.ScrollView.class),
                                        0),
                                0),
                        isDisplayed()));
        textView2.check(matches(withText("Quick Guide")));

        ViewInteraction appCompatImageButton6 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton6.perform(click());

        ViewInteraction appCompatButton5 = onView(
                allOf(withId(R.id.pronounceGuideButton), withText("Pronunciation Guide"), withContentDescription("Pronunciation Guide"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.ScrollView")),
                                        0),
                                0)));
        appCompatButton5.perform(scrollTo(), click());

        ViewInteraction actionMenuItemView = onView(
                allOf(withId(R.id.searchBar), withContentDescription("Search"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.action_bar),
                                        2),
                                0),
                        isDisplayed()));
        actionMenuItemView.perform(click());

        ViewInteraction textView3 = onView(
                allOf(withText("Search"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                0),
                        isDisplayed()));
        textView3.check(matches(withText("Search")));

        ViewInteraction actionMenuItemView2 = onView(
                allOf(withId(R.id.close_search_activity_button), withContentDescription("Close"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.action_bar),
                                        1),
                                0),
                        isDisplayed()));
        actionMenuItemView2.perform(click());

        ViewInteraction textView4 = onView(
                allOf(withId(R.id.prounceHeader), withText("Quick Guide"), withContentDescription("Quick Guide"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.ScrollView.class),
                                        0),
                                0),
                        isDisplayed()));
        textView4.check(matches(withText("Quick Guide")));

        ViewInteraction actionMenuItemView4 = onView(
                allOf(withId(R.id.settings), withContentDescription("Settings"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.action_bar),
                                        2),
                                1),
                        isDisplayed()));
        actionMenuItemView4.perform(click());

        ViewInteraction textView5 = onView(
                allOf(withText("Settings"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        //textView5.check(matches(withText("Settings")));

        ViewInteraction appCompatImageButton7 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton7.perform(click());

        ViewInteraction textView6 = onView(
                allOf(withText("Categories"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                0),
                        isDisplayed()));
        textView6.check(matches(withText("Categories")));

        ViewInteraction appCompatButton6 = onView(
                allOf(withId(R.id.cat1Button), withText("Animals"), withContentDescription("Animals"),
                        childAtPosition(
                                allOf(withId(R.id.cardMenuGridLayout),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                1)),
                                0)));
        appCompatButton6.perform(scrollTo(), click());

        ViewInteraction appCompatCheckBox = onView(
                allOf(withId(R.id.show_alert_checkbox), withText("Dont Show Again"),
                        childAtPosition(
                                allOf(withId(R.id.alertHelpConstraintView),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                6),
                        isDisplayed()));
        appCompatCheckBox.perform(click());

        ViewInteraction appCompatCheckBox2 = onView(
                allOf(withId(R.id.show_alert_checkbox), withText("Dont Show Again"),
                        childAtPosition(
                                allOf(withId(R.id.alertHelpConstraintView),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                6),
                        isDisplayed()));
        appCompatCheckBox2.perform(click());

        ViewInteraction constraintLayout = onView(
                allOf(withId(R.id.alertHelpConstraintView),
                        childAtPosition(
                                allOf(withId(android.R.id.content),
                                        childAtPosition(
                                                withClassName(is("android.widget.FrameLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        constraintLayout.perform(click());

        ViewInteraction appCompatImageButton8 = onView(
                allOf(withId(R.id.play_sound), withContentDescription("Play Sound"),
                        childAtPosition(
                                allOf(withId(R.id.card_linear_layout),
                                        childAtPosition(
                                                withId(R.id.cardViewFlippale),
                                                0)),
                                3),
                        isDisplayed()));
        appCompatImageButton8.perform(click());

        ViewInteraction imageView = onView(
                allOf(withId(R.id.cardCenterImage), withContentDescription("front and reverse card center"),
                        childAtPosition(
                                allOf(withId(R.id.card_linear_layout),
                                        childAtPosition(
                                                withId(R.id.cardViewFlippale),
                                                0)),
                                1),
                        isDisplayed()));

        ViewInteraction cardView = onView(
                allOf(withId(R.id.cardViewFlippale),
                        childAtPosition(
                                withParent(withId(R.id.pager)),
                                0),
                        isDisplayed()));
        cardView.perform(click());

        ViewInteraction appCompatImageButton9 = onView(
                allOf(withId(R.id.play_sound), withContentDescription("Play Sound"),
                        childAtPosition(
                                allOf(withId(R.id.card_linear_layout),
                                        childAtPosition(
                                                withId(R.id.cardViewFlippale),
                                                0)),
                                3),
                        isDisplayed()));
        appCompatImageButton9.perform(click());

        ViewInteraction actionMenuItemView5 = onView(
                allOf(withId(R.id.searchBar), withContentDescription("Search"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.action_bar),
                                        2),
                                0),
                        isDisplayed()));
        actionMenuItemView5.perform(click());

        ViewInteraction actionMenuItemView6 = onView(
                allOf(withId(R.id.close_search_activity_button), withContentDescription("Close"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.action_bar),
                                        1),
                                0),
                        isDisplayed()));
        actionMenuItemView6.perform(click());

        ViewInteraction cardView2 = onView(
                allOf(withId(R.id.cardViewFlippale),
                        childAtPosition(
                                withParent(withId(R.id.pager)),
                                0),
                        isDisplayed()));
        cardView2.perform(click());

        ViewInteraction appCompatImageButton10 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton10.perform(click());

        ViewInteraction appCompatButton7 = onView(
                allOf(withId(R.id.cat2Button), withText("BodyParts"), withContentDescription("BodyParts"),
                        childAtPosition(
                                allOf(withId(R.id.cardMenuGridLayout),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                1)),
                                1)));
        appCompatButton7.perform(scrollTo(), click());

        ViewInteraction appCompatCheckBox3 = onView(
                allOf(withId(R.id.show_alert_checkbox), withText("Dont Show Again"),
                        childAtPosition(
                                allOf(withId(R.id.alertHelpConstraintView),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                6),
                        isDisplayed()));
        appCompatCheckBox3.perform(click());

        ViewInteraction constraintLayout2 = onView(
                allOf(withId(R.id.alertHelpConstraintView),
                        childAtPosition(
                                allOf(withId(android.R.id.content),
                                        childAtPosition(
                                                withClassName(is("android.widget.FrameLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        constraintLayout2.perform(click());

        ViewInteraction appCompatImageButton11 = onView(
                allOf(withId(R.id.play_sound), withContentDescription("Play Sound"),
                        childAtPosition(
                                allOf(withId(R.id.card_linear_layout),
                                        childAtPosition(
                                                withId(R.id.cardViewFlippale),
                                                0)),
                                3),
                        isDisplayed()));
        appCompatImageButton11.perform(click());

        ViewInteraction cardView3 = onView(
                allOf(withId(R.id.cardViewFlippale),
                        childAtPosition(
                                withParent(withId(R.id.pager)),
                                0),
                        isDisplayed()));
        cardView3.perform(click());

        ViewInteraction appCompatImageButton12 = onView(
                allOf(withId(R.id.play_sound), withContentDescription("Play Sound"),
                        childAtPosition(
                                allOf(withId(R.id.card_linear_layout),
                                        childAtPosition(
                                                withId(R.id.cardViewFlippale),
                                                0)),
                                3),
                        isDisplayed()));
        appCompatImageButton12.perform(click());

        ViewInteraction appCompatImageButton13 = onView(
                allOf(withContentDescription("Navigate up"),
                        childAtPosition(
                                allOf(withId(R.id.action_bar),
                                        childAtPosition(
                                                withId(R.id.action_bar_container),
                                                0)),
                                1),
                        isDisplayed()));
        appCompatImageButton13.perform(click());

        ViewInteraction appCompatButton8 = onView(
                allOf(withId(R.id.cat9Button), withText("Transportation"), withContentDescription("Transportation"),
                        childAtPosition(
                                allOf(withId(R.id.cardMenuGridLayout),
                                        childAtPosition(
